# dd-trace-cpp

./: .CODEOWNERS  .bazelrc  .bazelrc.std  .flake8  .gitignore  .gitlab-ci.yml  .lcovignore  APP_EXTENDED_HEARTBEAT_IMPLEMENTATION.md  BUILD.bazel  CMakeLists.txt  CMakePresets.json  CheckRequiredCMakeVersion.cmake  Dockerfile  MODULE.bazel  Makefile  NOTES.md  README.md  WORKSPACE  abseil.patch  decisions.md  includes.dot  ownership.dot  propagation_styles.h  report  report2  report4  report5  report6  report7  report8  supported-configurations.json  tracer_config.h
.circleci/: README.md  config.yml
.claude/: CLAUDE.md
.github/: CODEOWNERS  dependabot.yml  dependabot.yml.disabled
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: add_final_status.xsl  codeql-analysis.yml  dev.yml  main.yml  temp_test.yml  tmp.yml
.gitlab/: benchmarks.yml  config-registry.yml  one-pipeline.locked.yml
benchmark/: CMakeLists.txt  README.md  benchmark.cpp  benchmark_globber.cpp  benchmark_tinycc.cpp  example.cpp  hasher.cpp  hasher.h  runall.sh  trace_id_bench.cpp
binding/c/: CMakeLists.txt  README.md
binding/c/include/datadog/c/: tracer.h
binding/c/src/: tracer.cpp
binding/c/test/: test_c_binding.cpp
binding/rust/: Cargo.toml  build.rs
binding/rust/examples/: http_tracing.rs
binding/rust/src/: lib.rs
binding/rust/src/datadog_sdk/: bindings.rs  mod.rs
binding/rust/src/integrations/: axum.rs  mod.rs  reqwest.rs
binding/rust/src/tracing_datadog_sdk/: mod.rs
binding/rust/src/tracing_dd/: mod.rs
binding/rust/tests/: integrations.rs  smoke.rs  test_lib.rs  tracing_test.rs
bindings/lua/: test.lua  tracer.cpp
bindings/lua/ffi/: ddtrace.lua  tracer.cpp  tracer.h
boosty/: README.md
boosty/example/: Makefile  main.cpp
boosty/example/ddstd/: optional.h  string_view.h  variant.h
boosty/extracted/boost/: assert.hpp  blank.hpp  blank_fwd.hpp  none.hpp  (+10 more)
cmake/: curl.cmake
cmake/compiler/: clang.cmake  clang_apple.cmake  gcc.cmake  msvc.cmake
doc/: Makefile  README.md  includes.dot  maintainers.md  ownership.dot  sampling-delegation.md
example/: CMakeLists.txt  Makefile  example.cpp  hasher.cpp  scratch.cpp
examples/: CMakeLists.txt  README.md
examples/baggage/: CMakeLists.txt  main.cpp
examples/c-demo/: main.c
examples/container/: container-id.sh
examples/elsa/: CMakeLists.txt  httpclient.h  main.cpp
examples/gameday/: CMakeLists.txt  main.cpp
examples/hasher/: CMakeLists.txt  docker-compose.yaml  hasher.cpp
examples/http-server/: Dockerfile  README.md  docker-compose.yaml
fuzz/: CMakeLists.txt  README.md
fuzz/base64/: CMakeLists.txt  main.cpp
fuzz/remote-configuration/: CMakeLists.txt  fuzz.cpp  main.cpp
fuzz/tracing/: CMakeLists.txt
fuzz/w3c-propagation/: CMakeLists.txt  README.md  fuzz.cpp
include/: msgpackpp.h
include/datadog/: baggage.h  cerr_logger.h  clock.h  collector.h  collector_config.h  collector_response.h  config.h  curl.h  datadog_agent.h  datadog_agent_config.h  default_http_client.h  dict_reader.h  dict_writer.h  environment.h  environment_registry.h  error.h  event_scheduler.h  expected.h  http_client.h  http_endpoint_calculation_mode.h  id_generator.h  injection_options.h  logger.h  metrics.h  msgpack.h  null_collector.h  propagation_style.h  propagation_styles.h  rate.h  sampling_decision.h  sampling_mechanism.h  sampling_priority.h  span.h  span_config.h  span_data.h  span_defaults.h  span_guard.h  span_matcher.h  span_sampler.h  span_sampler_config.h  (+13 more)
metadata/: supported-configurations.json
src/: clock.cpp  clock.h  collector.cpp  collector.h  collector_config.cpp  collector_config.h  collector_response.cpp  collector_response.h  curl.h  datadog_agent.cpp  datadog_agent.h  datadog_agent_config.cpp  datadog_agent_config.h  default_http_client.h  default_http_client_curl.cpp  default_http_client_null.cpp  dict_reader.h  dict_writer.h  error.cpp  error.h  event_scheduler.h  expected.cpp  expected.h  http_client.cpp  http_client.h  id_generator.cpp  id_generator.h  logger.cpp  logger.h  msgpack.cpp  msgpack.h  msgpackpp.h  propagation_styles.h  rate.cpp  rate.h  sampling_decision.cpp  sampling_decision.h  sampling_mechanism.cpp  sampling_priority.cpp  sampling_priority.h  (+30 more)
src/datadog/: baggage.cpp  base64.cpp  base64.h  cerr_logger.h  clock.cpp  clock.h  collector.cpp  collector.h  collector_response.cpp  collector_response.h  config.h  config_manager.cpp  config_manager.h  config_update.h  curl.cpp  curl.h  datadog_agent.cpp  datadog_agent.h  datadog_agent_config.cpp  datadog_agent_config.h  datadog_config_final.h  ddsketch.cpp  ddsketch.h  debug_span.cpp  debug_span.h  default_http_client.h  default_http_client_curl.cpp  default_http_client_null.cpp  dict_reader.h  dict_writer.h  endpoint_guessing.cpp  endpoint_guessing.h  endpoint_inferral.cpp  endpoint_inferral.h  environment.cpp  environment.h  error.cpp  error.h  event_scheduler.cpp  event_scheduler.h  (+112 more)
test/: CMakeLists.txt  Makefile  README.md  collectors.cpp  collectors.h  dict_readers.h  dict_writers.h  glob.cpp  http_clients.h  loggers.cpp  loggers.h  matchers.h  smoke.cpp  span.cpp  span_sampler.cpp  test.cpp  test.h  test_baggage.cpp  test_base64.cpp  test_cerr_logger.cpp  test_config_manager.cpp  test_curl.cpp  test_datadog_agent.cpp  test_ddsketch.cpp  test_endpoint_guessing.cpp  test_endpoint_inferral.cpp  test_glob.cpp  test_limiter.cpp  test_metrics.cpp  test_parse_util.cpp  test_platform_util.cpp  test_remote_config.cpp  test_sampling_util.cpp  test_smoke.cpp  test_span.cpp  test_span_sampler.cpp  test_stable_config.cpp  test_stats_concentrator.cpp  test_trace_id.cpp  test_trace_sampler.cpp  (+9 more)
test/mocks/: collectors.cpp  collectors.h  dict_readers.h  event_schedulers.h  http_clients.h  loggers.cpp  loggers.h
test/remote_config/: test_remote_config.cpp
test/system-tests/: CMakeLists.txt  fake_span.h  main.cpp  manual_scheduler.h  request_handler.cpp  request_handler.h  utils.h
test/telemetry/: test_configuration.cpp  test_metrics.cpp  test_root_session_id.cpp  test_telemetry.cpp
tools/config-inversion/: CMakeLists.txt  main.cpp
(+724 files in other folders)
