cc_library(
    name = "dd_trace_cpp",
    srcs = [
        "src/cerr_logger.cpp",
        "src/cerr_logger.h",
        "src/clock.cpp",
        "src/clock.h",
        "src/collector.cpp",
        "src/collector.h",
        "src/collector_response.cpp",
        "src/collector_response.h",
        "src/curl.h",
        "src/datadog_agent_config.cpp",
        "src/datadog_agent_config.h",
        "src/datadog_agent.cpp",
        "src/datadog_agent.h",
        # "src/default_http_client_curl.cpp", no libcurl
        "src/default_http_client.h",
        "src/default_http_client_null.cpp",
        "src/dict_reader.cpp",
        "src/dict_reader.h",
        "src/dict_writer.cpp",
        "src/dict_writer.h",
        "src/error.cpp",
        "src/error.h",
        "src/event_scheduler.cpp",
        "src/event_scheduler.h",
        "src/expected.cpp",
        "src/expected.h",
        "src/http_client.cpp",
        "src/http_client.h",
        "src/id_generator.cpp",
        "src/id_generator.h",
        "src/json.hpp",
        "src/logger.cpp",
        "src/logger.h",
        "src/msgpack.cpp",
        "src/msgpack.h",
        "src/propagation_styles.cpp",
        "src/propagation_styles.h",
        "src/rate.cpp",
        "src/rate.h",
        "src/sampling_decision.cpp",
        "src/sampling_decision.h",
        "src/sampling_mechanism.cpp",
        "src/sampling_mechanism.h",
        "src/sampling_priority.cpp",
        "src/sampling_priority.h",
        "src/span_config.cpp",
        "src/span_config.h",
        "src/span.cpp",
        "src/span_data.cpp",
        "src/span_data.h",
        "src/span_defaults.cpp",
        "src/span_defaults.h",
        "src/span.h",
        "src/span_sampler_config.cpp",
        "src/span_sampler_config.h",
        "src/span_sampler.cpp",
        "src/span_sampler.h",
        "src/tags.cpp",
        "src/tags.h",
        "src/threaded_event_scheduler.cpp",
        "src/threaded_event_scheduler.h",
        "src/tracer_config.cpp",
        "src/tracer_config.h",
        "src/tracer.cpp",
        "src/tracer.h",
        "src/trace_sampler_config.cpp",
        "src/trace_sampler_config.h",
        "src/trace_sampler.cpp",
        "src/trace_sampler.h",
        "src/trace_segment.cpp",
        "src/trace_segment.h",
    ],
    hdrs = [
        "src/cerr_logger.h",
        "src/clock.h",
        "src/collector.h",
        "src/collector_response.h",
        # "src/curl.h", no libcurl
        "src/datadog_agent_config.h",
        "src/datadog_agent.h",
        "src/default_http_client.h",
        "src/dict_reader.h",
        "src/dict_writer.h",
        "src/error.h",
        "src/event_scheduler.h",
        "src/expected.h",
        "src/http_client.h",
        "src/id_generator.h",
        "src/json.hpp",
        "src/logger.h",
        "src/msgpack.h",
        "src/propagation_styles.h",
        "src/rate.h",
        "src/sampling_decision.h",
        "src/sampling_mechanism.h",
        "src/sampling_priority.h",
        "src/span_config.h",
        "src/span_data.h",
        "src/span_defaults.h",
        "src/span.h",
        "src/span_sampler_config.h",
        "src/span_sampler.h",
        "src/tags.h",
        "src/threaded_event_scheduler.h",
        "src/tracer_config.h",
        "src/tracer.h",
        "src/trace_sampler_config.h",
        "src/trace_sampler.h",
        "src/trace_segment.h",
    ],
    copts = [
        "-Wall",
        "-Wextra",
        "-Werror",
        "-pedantic",
        "-std=c++17",
    ],
    strip_include_prefix = "src/",
    include_prefix = "datadog/",
    visibility = ["//visibility:public"],
)