cc_library(
    name = "dd_trace_cpp",
    srcs = [
        "src/datadog/cerr_logger.cpp",
        "src/datadog/cerr_logger.h",
        "src/datadog/clock.cpp",
        "src/datadog/clock.h",
        "src/datadog/collector.cpp",
        "src/datadog/collector.h",
        "src/datadog/collector_response.cpp",
        "src/datadog/collector_response.h",
        "src/datadog/curl.h",
        "src/datadog/datadog_agent_config.cpp",
        "src/datadog/datadog_agent_config.h",
        "src/datadog/datadog_agent.cpp",
        "src/datadog/datadog_agent.h",
        # "src/datadog/default_http_client_curl.cpp", no libcurl
        "src/datadog/default_http_client.h",
        "src/datadog/default_http_client_null.cpp",
        "src/datadog/dict_reader.cpp",
        "src/datadog/dict_reader.h",
        "src/datadog/dict_writer.cpp",
        "src/datadog/dict_writer.h",
        "src/datadog/error.cpp",
        "src/datadog/error.h",
        "src/datadog/event_scheduler.cpp",
        "src/datadog/event_scheduler.h",
        "src/datadog/expected.cpp",
        "src/datadog/expected.h",
        "src/datadog/http_client.cpp",
        "src/datadog/http_client.h",
        "src/datadog/id_generator.cpp",
        "src/datadog/id_generator.h",
        "src/datadog/json.hpp",
        "src/datadog/logger.cpp",
        "src/datadog/logger.h",
        "src/datadog/msgpack.cpp",
        "src/datadog/msgpack.h",
        "src/datadog/propagation_styles.cpp",
        "src/datadog/propagation_styles.h",
        "src/datadog/rate.cpp",
        "src/datadog/rate.h",
        "src/datadog/sampling_decision.cpp",
        "src/datadog/sampling_decision.h",
        "src/datadog/sampling_mechanism.cpp",
        "src/datadog/sampling_mechanism.h",
        "src/datadog/sampling_priority.cpp",
        "src/datadog/sampling_priority.h",
        "src/datadog/span_config.cpp",
        "src/datadog/span_config.h",
        "src/datadog/span.cpp",
        "src/datadog/span_data.cpp",
        "src/datadog/span_data.h",
        "src/datadog/span_defaults.cpp",
        "src/datadog/span_defaults.h",
        "src/datadog/span.h",
        "src/datadog/span_sampler_config.cpp",
        "src/datadog/span_sampler_config.h",
        "src/datadog/span_sampler.cpp",
        "src/datadog/span_sampler.h",
        "src/datadog/tags.cpp",
        "src/datadog/tags.h",
        "src/datadog/threaded_event_scheduler.cpp",
        "src/datadog/threaded_event_scheduler.h",
        "src/datadog/tracer_config.cpp",
        "src/datadog/tracer_config.h",
        "src/datadog/tracer.cpp",
        "src/datadog/tracer.h",
        "src/datadog/trace_sampler_config.cpp",
        "src/datadog/trace_sampler_config.h",
        "src/datadog/trace_sampler.cpp",
        "src/datadog/trace_sampler.h",
        "src/datadog/trace_segment.cpp",
        "src/datadog/trace_segment.h",
    ],
    hdrs = [
        "src/datadog/cerr_logger.h",
        "src/datadog/clock.h",
        "src/datadog/collector.h",
        "src/datadog/collector_response.h",
        # "src/datadog/curl.h", no libcurl
        "src/datadog/datadog_agent_config.h",
        "src/datadog/datadog_agent.h",
        "src/datadog/default_http_client.h",
        "src/datadog/dict_reader.h",
        "src/datadog/dict_writer.h",
        "src/datadog/error.h",
        "src/datadog/event_scheduler.h",
        "src/datadog/expected.h",
        "src/datadog/http_client.h",
        "src/datadog/id_generator.h",
        "src/datadog/json.hpp",
        "src/datadog/logger.h",
        "src/datadog/msgpack.h",
        "src/datadog/propagation_styles.h",
        "src/datadog/rate.h",
        "src/datadog/sampling_decision.h",
        "src/datadog/sampling_mechanism.h",
        "src/datadog/sampling_priority.h",
        "src/datadog/span_config.h",
        "src/datadog/span_data.h",
        "src/datadog/span_defaults.h",
        "src/datadog/span.h",
        "src/datadog/span_sampler_config.h",
        "src/datadog/span_sampler.h",
        "src/datadog/tags.h",
        "src/datadog/threaded_event_scheduler.h",
        "src/datadog/tracer_config.h",
        "src/datadog/tracer.h",
        "src/datadog/trace_sampler_config.h",
        "src/datadog/trace_sampler.h",
        "src/datadog/trace_segment.h",
    ],
    copts = [
        "-Wall",
        "-Wextra",
        "-Werror",
        "-pedantic",
        "-std=c++17",
    ],
    strip_include_prefix = "src/",
    visibility = ["//visibility:public"],
)