cc_library(
    name = "dd_trace_cpp",
    srcs = [
    "src/datadog/base64.cpp",
    "src/datadog/cerr_logger.cpp",
    "src/datadog/clock.cpp",
    "src/datadog/config_manager.cpp",
    "src/datadog/collector_response.cpp",
#     "src/datadog/curl.cpp", no libcurl
    "src/datadog/datadog_agent_config.cpp",
    "src/datadog/datadog_agent.cpp",
#     "src/datadog/default_http_client_curl.cpp", no libcurl
    "src/datadog/default_http_client_null.cpp",
    "src/datadog/environment.cpp",
    "src/datadog/error.cpp",
    "src/datadog/extraction_util.cpp",
    "src/datadog/glob.cpp",
    "src/datadog/http_client.cpp",
    "src/datadog/id_generator.cpp",
    "src/datadog/limiter.cpp",
    "src/datadog/logger.cpp",
    "src/datadog/metrics.cpp",
    "src/datadog/msgpack.cpp",
    "src/datadog/null_collector.cpp",
    "src/datadog/parse_util.cpp",
    "src/datadog/platform_util.cpp",
    "src/datadog/propagation_style.cpp",
    "src/datadog/random.cpp",
    "src/datadog/rate.cpp",
    "src/datadog/remote_config.cpp",
    "src/datadog/runtime_id.cpp",
    "src/datadog/span.cpp",
    "src/datadog/span_data.cpp",
    "src/datadog/span_defaults.cpp",
    "src/datadog/span_matcher.cpp",
    "src/datadog/span_sampler_config.cpp",
    "src/datadog/span_sampler.cpp",
    "src/datadog/string_util.cpp",
    "src/datadog/tag_propagation.cpp",
    "src/datadog/tags.cpp",
    "src/datadog/threaded_event_scheduler.cpp",
    "src/datadog/tracer_config.cpp",
    "src/datadog/tracer_telemetry.cpp",
    "src/datadog/tracer.cpp",
    "src/datadog/trace_id.cpp",
    "src/datadog/trace_sampler_config.cpp",
    "src/datadog/trace_sampler.cpp",
    "src/datadog/trace_segment.cpp",
    "src/datadog/version.cpp",
    "src/datadog/w3c_propagation.cpp",
    ],
    hdrs = [
    "src/datadog/base64.h",
    "src/datadog/cerr_logger.h",
    "src/datadog/config.h",
    "src/datadog/clock.h",
    "src/datadog/config_manager.h",
    "src/datadog/config_update.h",
    "src/datadog/collector.h",
    "src/datadog/collector_response.h",
#     "src/datadog/curl.h", no libcurl
    "src/datadog/datadog_agent_config.h",
    "src/datadog/datadog_agent.h",
    "src/datadog/default_http_client.h",
    "src/datadog/dict_reader.h",
    "src/datadog/dict_writer.h",
    "src/datadog/environment.h",
    "src/datadog/error.h",
    "src/datadog/event_scheduler.h",
    "src/datadog/expected.h",
    "src/datadog/extracted_data.h",
    "src/datadog/extraction_util.h",
    "src/datadog/glob.h",
    "src/datadog/hex.h",
    "src/datadog/http_client.h",
    "src/datadog/id_generator.h",
    "src/datadog/injection_options.h",
    "src/datadog/json.hpp",
    "src/datadog/json_fwd.hpp",
    "src/datadog/limiter.h",
    "src/datadog/logger.h",
    "src/datadog/metrics.h",
    "src/datadog/msgpack.h",
    "src/datadog/null_collector.h",
    "src/datadog/optional.h",
    "src/datadog/parse_util.h",
    "src/datadog/platform_util.h",
    "src/datadog/propagation_style.h",
    "src/datadog/random.h",
    "src/datadog/rate.h",
    "src/datadog/remote_config.h",
    "src/datadog/runtime_id.h",
    "src/datadog/sampling_decision.h",
    "src/datadog/sampling_mechanism.h",
    "src/datadog/sampling_priority.h",
    "src/datadog/sampling_util.h",
    "src/datadog/span_config.h",
    "src/datadog/span_data.h",
    "src/datadog/span_defaults.h",
    "src/datadog/span.h",
    "src/datadog/span_matcher.h",
    "src/datadog/span_sampler_config.h",
    "src/datadog/span_sampler.h",
    "src/datadog/string_util.h",
    "src/datadog/string_view.h",
    "src/datadog/tag_propagation.h",
    "src/datadog/tags.h",
    "src/datadog/threaded_event_scheduler.h",
    "src/datadog/tracer_config.h",
    "src/datadog/tracer_signature.h",
    "src/datadog/tracer_telemetry.h",
    "src/datadog/tracer.h",
    "src/datadog/trace_id.h",
    "src/datadog/trace_sampler_config.h",
    "src/datadog/trace_sampler.h",
    "src/datadog/trace_segment.h",
    "src/datadog/version.h",
    "src/datadog/w3c_propagation.h",
    ],
    strip_include_prefix = "src/",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:optional",
    ],
)


cc_test(
    name = "dd_trace_cpp_test",
    srcs = [
        # test driver
        "test/main.cpp",

        # wrapper around Catch2
        "test/test.cpp",
        "test/test.h",
        "test/catch.hpp",

        # mocks
        "test/mocks/collectors.cpp",
        "test/mocks/collectors.h",
        "test/mocks/dict_readers.cpp",
        "test/mocks/dict_readers.h",
        "test/mocks/dict_writers.cpp",
        "test/mocks/dict_writers.h",
        "test/mocks/event_schedulers.cpp",
        "test/mocks/event_schedulers.h",
        "test/mocks/http_clients.cpp",
        "test/mocks/http_clients.h",
        "test/mocks/loggers.cpp",
        "test/mocks/loggers.h",

        # utilities
        "test/matchers.cpp",
        "test/matchers.h",

        # test cases
        "test/test_cerr_logger.cpp",
        # "test/test_curl.cpp", no curl: bazel build/test is for Envoy.
        "test/test_datadog_agent.cpp",
        "test/test_glob.cpp",
        "test/test_limiter.cpp",
        "test/test_metrics.cpp",
        "test/test_msgpack.cpp",
        "test/test_parse_util.cpp",
        "test/test_smoke.cpp",
        "test/test_span.cpp",
        "test/test_span_sampler.cpp",
        "test/test_trace_id.cpp",
        "test/test_trace_segment.cpp",
        "test/test_tracer_config.cpp",
        "test/test_tracer_telemetry.cpp",
        "test/test_tracer.cpp",
        "test/test_trace_sampler.cpp",
    ],
    deps = [
        "dd_trace_cpp",
    ],
)
